<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/ivPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/btnLoadPicture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnTakePicture"
                android:layout_toRightOf="@+id/btnTakePicture"
                android:onClick="onPickImageClick"
                android:text="@string/btn_LoadPicture" />

            <Button
                android:id="@+id/btnTakePicture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ivPic"
                android:layout_below="@+id/ivPic"
                android:onClick="onTakePictureClick"
                android:text="@string/btn_TakePicture" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_RestId"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="5dp"
            android:textColor="#0000FF" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/tv_RestName"
            android:inputType="text"
            android:textColor="#0000FF" />

        <EditText
            android:id="@+id/etWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/tv_RestWeb"
            android:inputType="textUri"
            android:textColor="#0000FF" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/tv_RestPhone"
            android:inputType="phone"
            android:textColor="#0000FF" />

        <EditText
            android:id="@+id/etSpeciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/tv_RestSpeciality"
            android:inputType="text"
            android:textColor="#0000FF" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <Button
                android:id="@+id/btnConfirmUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btnUpdateCancel"
                android:text="@string/btn_Update" />

            <Button
                android:id="@+id/btnUpdateCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnConfirmUpdate"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/btn_Cancel" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>